# launcher

./: CLAUDE.md  Cargo.toml  flake.nix  garnix.yaml  launcher-ctl  process-compose.yaml
.github/workflows/: cache.yml
scripts/: README.md  heaptrack-overlay.sh
src/: clipboard.rs  common.rs  desktop.rs  hyprland.rs  launcher.rs  layer.rs  layer_clip.rs  layer_launcher.rs  lib.rs  main.rs  picker.rs  scroll.rs  usage.rs
src/clip/: db.rs
src/clipsync/: transport.rs
