[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "launcher"
path = "src/launcher.rs"

[[bin]]
name = "clipboard"
path = "src/clipboard.rs"

[[bin]]
name = "picker"
path = "src/picker.rs"

[[bin]]
name = "clipd"
path = "src/clipd.rs"

[[bin]]
name = "clip-sync"
path = "src/clip-sync.rs"

[dependencies]
egui = "0.33"
# eframe stays for the picker binary (a one-shot dmenu-style window). Pinned to
# 0.33 to match egui/egui-wgpu 0.33 used by wayapp, so the whole tree shares one
# egui — the launcher and clipboard moved off eframe onto wayapp's layer-shell
# harness and only the picker still drives an eframe window.
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
# wlr-layer-shell surfaces for the launcher and clipboard overlays. wayapp is
# the vendored egui-on-smithay harness; smithay-client-toolkit is pulled in
# directly for the layer-shell types (Anchor, Layer, KeyboardInteractivity)
# the apps configure on their surfaces.
wayapp = { path = "vendor/wayapp" }
smithay-client-toolkit = "0.20"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
nucleo-matcher = "0.3"
strsim = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
rusqlite = { version = "0.31", features = ["bundled"] }
wayland-clipboard-listener = { version = "0.6", features = ["wlr-data-control"] }
imagesize = "0.13"
fnv = "1"
dirs = "6"
if-addrs = "0.15"

[profile.release]
lto = "thin"
codegen-units = 8
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2  # Optimize deps but not your code
